force-app/main/default/objects/SEBCase__c/SEBCase__c.object-meta.xml
<CustomObject>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>SEB Case</label>
    <nameField>
        <label>SEB Case ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SEB Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>