force-app/main/default/objects/SEBCase__c/fields/AdditionalRespondentsContactInfo__c.field-meta.xml
<CustomField>
    <fullName>AdditionalRespondentsContactInfo__c</fullName>
    <description>PacPoint-MV050819 - Created for BREG phase 1</description>
    <inlineHelpText>Enter the names, addresses and phone numbers of all additional respondents.</inlineHelpText>
    <label>Additional Respondents - Contact Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>