force-app/main/default/objects/SEBCase__c/fields/Advertisement__c.field-meta.xml
<CustomField>
    <fullName>Advertisement__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <inlineHelpText>Was the contract made because of an advertisement?</inlineHelpText>
    <label>4a.Advertisement?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>