force-app/main/default/objects/SEBCase__c/fields/AdvertisementDescription__c.field-meta.xml
<CustomField>
    <fullName>AdvertisementDescription__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <inlineHelpText>If a copy is not available, then provide the date of the advertisement and where it was located such as a sign, newspaper, radio, television, magazine, leaflet, etc.</inlineHelpText>
    <label>4c. Advertisement Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>