force-app/main/default/objects/SEBCase__c/fields/AllTotalSEBCaseExpenses__c.field-meta.xml
<CustomField>
    <fullName>AllTotalSEBCaseExpenses__c</fullName>
    <description>PacPoint AC020821 - Created for BREG Support Year 2 - CMS Migration</description>
    <label>All Total SEB Case Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>