force-app/main/default/objects/SEBCase__c/fields/AttachAdvertisement__c.field-meta.xml
<CustomField>
    <fullName>AttachAdvertisement__c</fullName>
    <description>PacPoint-RA110118-BREG</description>
    <inlineHelpText>If you answered yes to 4a, please provide a copy of the advertisement.</inlineHelpText>
    <label>4b. Attach Advertisement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>