force-app/main/default/objects/SEBCase__c/fields/ClosedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ClosedDateTime__c</fullName>
    <description>PacPoint-MV050819 - Created for BREG phase 1</description>
    <inlineHelpText>Field populated automatically when the status is set to &quot;Closed&quot;</inlineHelpText>
    <label>Closed Date / Time</label>
    <type>DateTime</type>
</CustomField>