force-app/main/default/objects/SEBCase__c/fields/CMSCaseExpense__c.field-meta.xml
<CustomField>
    <fullName>CMSCaseExpense__c</fullName>
    <description>PacPoint-AC020221 - Created for BREG SEC/SEB Support Year 2 - CMS Migration to PROD</description>
    <label>CMS Case Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>