force-app/main/default/objects/SEBCase__c/fields/ComplaintSummary__c.field-meta.xml
<CustomField>
    <fullName>ComplaintSummary__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <inlineHelpText>Please  type a  complete  and  detailed  chronological  statement  of  your  complaint. Include  copies  of  all  documents, such  as  contracts, correspondence, receipts, statements, and photographs.</inlineHelpText>
    <label>Complaint Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>