force-app/main/default/objects/SEBCase__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-JB110118 - Created for BREG phase 1</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SEB Cases</relationshipLabel>
    <relationshipName>SEB_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>