force-app/main/default/objects/SEBCase__c/fields/ContractCopyAttached__c.field-meta.xml
<CustomField>
    <fullName>ContractCopyAttached__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <inlineHelpText>If you answered yes to 1a, please include a copy of the contract/agreement.</inlineHelpText>
    <label>1b. Contract Copy Attached?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>