force-app/main/default/objects/SEBCase__c/fields/ContractExplanation__c.field-meta.xml
<CustomField>
    <fullName>ContractExplanation__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <inlineHelpText>If the contract/agreement was not in writing, explain your understanding of the terms of your contract/agreement.</inlineHelpText>
    <label>1d. Contract Explanation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>