force-app/main/default/objects/SEBCase__c/fields/ContractModification__c.field-meta.xml
<CustomField>
    <fullName>ContractModification__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <inlineHelpText>Did you and/or the respondent(s) modify or amend the contractual terms?</inlineHelpText>
    <label>2a. Contract Modification?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>