force-app/main/default/objects/SEBCase__c/fields/ContractModificationExplanation__c.field-meta.xml
<CustomField>
    <fullName>ContractModificationExplanation__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <inlineHelpText>If you answered yes to 2a, explain the modification or amendment.</inlineHelpText>
    <label>2b. Contract Modification Explanation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>