force-app/main/default/objects/SEBCase__c/fields/ContractNegotiatorforRespondents__c.field-meta.xml
<CustomField>
    <fullName>ContractNegotiatorforRespondents__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <inlineHelpText>Who negotiated the contract for the respondents?</inlineHelpText>
    <label>1c. Contract Negotiator for Respondents</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>