force-app/main/default/objects/SEBCase__c/fields/ContractSigned__c.field-meta.xml
<CustomField>
    <fullName>ContractSigned__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <inlineHelpText>Did you sign any contract/agreement?</inlineHelpText>
    <label>1a. Contract Signed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>