force-app/main/default/objects/SEBCase__c/fields/CreatedviatheCommunity__c.field-meta.xml
<CustomField>
    <fullName>CreatedviatheCommunity__c</fullName>
    <description>PacPoint-MV081919 - Created for BREG phase 1</description>
    <formula>IF(
 ISPICKVAL(CreatedBy.UserType, &quot;Standard&quot;),
 false, 
 true
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created via the Community</label>
    <type>Checkbox</type>
</CustomField>