force-app/main/default/objects/SEBCase__c/fields/CurrentAttorney__c.field-meta.xml
<CustomField>
    <fullName>CurrentAttorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-MV081919 - Created for BREG phase 1</description>
    <label>Current Attorney</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SEB_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>