force-app/main/default/objects/SEBCase__c/fields/CurrentClerk__c.field-meta.xml
<CustomField>
    <fullName>CurrentClerk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-MV081919 - Created for BREG phase 1</description>
    <label>Current Clerk</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SEB_Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>