force-app/main/default/objects/SEBCase__c/fields/CurrentInvestigator__c.field-meta.xml
<CustomField>
    <fullName>CurrentInvestigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-MV081919 - Created for BREG phase 1</description>
    <label>Current Investigator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SEB_Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>