force-app/main/default/objects/SEBCase__c/fields/CurrentStatusDateTime__c.field-meta.xml
<CustomField>
    <fullName>CurrentStatusDateTime__c</fullName>
    <description>PacPoint-IC051419 - Created for BREG phase 1</description>
    <label>Current Status Date / Time</label>
    <type>DateTime</type>
</CustomField>