force-app/main/default/objects/SEBCase__c/fields/DateofBirth__c.field-meta.xml
<CustomField>
    <fullName>DateofBirth__c</fullName>
    <description>PacPoint-MV051719 - Created for BREG phase 1</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>