force-app/main/default/objects/SEBCase__c/fields/DateOfLastMonth__c.field-meta.xml
<CustomField>
    <fullName>DateOfLastMonth__c</fullName>
    <formula>TODAY() - DAY(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Of Last Month</label>
    <type>Date</type>
</CustomField>