force-app/main/default/objects/SEBCase__c/fields/DateReceived__c.field-meta.xml
<CustomField>
    <fullName>DateReceived__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>PacPoint - RA011019 - BREG Phase 1</description>
    <inlineHelpText>Date that the complaint was received.</inlineHelpText>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>