force-app/main/default/objects/SEBCase__c/fields/DCCA_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>DCCA_Case_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DCCA Case Id</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>DCCA Cases</relationshipLabel>
    <relationshipName>DCCA_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>