force-app/main/default/objects/SEBCase__c/fields/Describeyourdispute__c.field-meta.xml
<CustomField>
    <fullName>Describeyourdispute__c</fullName>
    <defaultValue>&quot;Please briefly explain your complaint. If possible, include a timeline of events and approximate dates.&quot;</defaultValue>
    <description>PacPoint-MV010419 - Created for BREG phase 1. To be used in the community only.</description>
    <label>Describe your dispute</label>
    <type>TextArea</type>
</CustomField>