force-app/main/default/objects/SEBCase__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative Error</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Bankruptcy Plan</fullName>
            </value>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>Complainant/Witness Deceased</fullName>
            </value>
            <value>
                <fullName>Complainant Uncooperative/Unavailable</fullName>
            </value>
            <value>
                <fullName>Complaint Withdrawn</fullName>
            </value>
            <value>
                <fullName>Conversion Disposition</fullName>
            </value>
            <value>
                <fullName>Entity Insolvent</fullName>
            </value>
            <value>
                <fullName>Foreign Jurisdiction</fullName>
            </value>
            <value>
                <fullName>Insufficient Evidence</fullName>
            </value>
            <value>
                <fullName>Legal action</fullName>
            </value>
            <value>
                <fullName>No action</fullName>
            </value>
            <value>
                <fullName>No Jurisdiction</fullName>
            </value>
            <value>
                <fullName>No Longer in Business</fullName>
            </value>
            <value>
                <fullName>No Violation</fullName>
            </value>
            <value>
                <fullName>Prior Action Taken</fullName>
            </value>
            <value>
                <fullName>Records Only</fullName>
            </value>
            <value>
                <fullName>Referral/Action Taken-Other Agency</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Respondent Deceased</fullName>
            </value>
            <value>
                <fullName>Respondent Unlocatable</fullName>
            </value>
            <value>
                <fullName>See Connecting Case</fullName>
            </value>
            <value>
                <fullName>Warning Letter</fullName>
            </value>
            <value>
                <fullName>Witness Uncooperative/Unavailable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>