force-app/main/default/objects/SEBCase__c/fields/ExamCaseReferral__c.field-meta.xml
<CustomField>
    <fullName>ExamCaseReferral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>Exam Case Referral</label>
    <referenceTo>Exam__c</referenceTo>
    <relationshipLabel>SEB Cases</relationshipLabel>
    <relationshipName>SEBCases</relationshipName>
    <type>Lookup</type>
</CustomField>