force-app/main/default/objects/SEBCase__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <label>External Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>