force-app/main/default/objects/SEBCase__c/fields/FairResolution__c.field-meta.xml
<CustomField>
    <fullName>FairResolution__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <inlineHelpText>What would you consider to be a fair resolution of your complaint and why?</inlineHelpText>
    <label>7. Fair Resolution?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>