force-app/main/default/objects/SEBCase__c/fields/Filing__c.field-meta.xml
<CustomField>
    <fullName>Filing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-JB111418 - Created for BREG phase 1</description>
    <label>Filing</label>
    <referenceTo>Filing__c</referenceTo>
    <relationshipLabel>SEB Cases</relationshipLabel>
    <relationshipName>SEB_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>