force-app/main/default/objects/SEBCase__c/fields/FY_Age__c.field-meta.xml
<CustomField>
    <fullName>FY_Age__c</fullName>
    <formula>IF(
ISPICKVAL(Status__c, &quot;Closed&quot;),
DATEVALUE(ClosedDateTime__c) - DATEVALUE(CreatedDate),
DATEVALUE(IF(ISBLANK((ClosedDateTime__c) ),(NOW()-167),(ClosedDateTime__c ))) - DATEVALUE(CreatedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FY Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>