force-app/main/default/objects/SEBCase__c/fields/GauranteesorPromises__c.field-meta.xml
<CustomField>
    <fullName>GauranteesorPromises__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <inlineHelpText>Were any guarantees and/or promises made?</inlineHelpText>
    <label>3a. Guarantees or Promises?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>