force-app/main/default/objects/SEBCase__c/fields/GuaranteesorPromisesAttatched__c.field-meta.xml
<CustomField>
    <fullName>GuaranteesorPromisesAttatched__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <inlineHelpText>If you answered yes to 3a, please include copies of any guarantees or written promises.</inlineHelpText>
    <label>3b. Guarantees or Promises Attatched</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>