force-app/main/default/objects/SEBCase__c/fields/GuaranteesorPromisesExplanation__c.field-meta.xml
<CustomField>
    <fullName>GuaranteesorPromisesExplanation__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <inlineHelpText>If there are no guarantees or promises in writing, explain your understanding of the terms of the verbal guarantees and/or promises.</inlineHelpText>
    <label>3c. Guarantees or Promises Explanation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>