force-app/main/default/objects/SEBCase__c/fields/Investigation_Legal_Recommend__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Legal_Recommend__c</fullName>
    <description>Counts the # of related Legal Investigations with a status of &quot;Recommend Warning Letter&quot; or &quot;Recommend to Close&quot; or &quot;Recommend to Settlement&quot; or &quot;Recommend Final Order&quot; or &quot;Recommend Judgement&quot;.</description>
    <label>Investigation (Legal) = Recommend</label>
    <summaryFilterItems>
        <field>Investigation__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Legal</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Investigation__c.Status__c</field>
        <operation>equals</operation>
        <value>Recommend Warning Letter, Recommend Settlement, Recommend to Close, Recommend Final Order, Recommend Judgement</value>
    </summaryFilterItems>
    <summaryForeignKey>Investigation__c.SEBCase__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>