force-app/main/default/objects/SEBCase__c/fields/Investigation_Recommend_Referral__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Recommend_Referral__c</fullName>
    <description>Counts the # of Investigations with a status of Recommended Referral.</description>
    <label>Investigation = Recommend Referral</label>
    <summaryFilterItems>
        <field>Investigation__c.Status__c</field>
        <operation>equals</operation>
        <value>Recommend Referral to Legal</value>
    </summaryFilterItems>
    <summaryForeignKey>Investigation__c.SEBCase__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>