force-app/main/default/objects/SEBCase__c/fields/Investigation_Recommended_to_Close_Legal__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Recommended_to_Close_Legal__c</fullName>
    <description>PacPoint-YH-05022025</description>
    <formula>OR( Investigation_Recommend_Referral__c &gt;0 ,
Investigation_Status_Recommend_to_Close__c &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investigation Recommended to Close/Legal</label>
    <type>Checkbox</type>
</CustomField>