force-app/main/default/objects/SEBCase__c/fields/Investigation_Status_Recommend_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Status_Recommend_to_Close__c</fullName>
    <description>Aggregates the child Investigations that have a Status = Recommend to Close.</description>
    <label>Investigation Status= Recommend to Close</label>
    <summaryFilterItems>
        <field>Investigation__c.Status__c</field>
        <operation>equals</operation>
        <value>Recommend to Close</value>
    </summaryFilterItems>
    <summaryForeignKey>Investigation__c.SEBCase__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>