force-app/main/default/objects/SEBCase__c/fields/IsDefaultTeamNumber__c.field-meta.xml
<CustomField>
    <fullName>IsDefaultTeamNumber__c</fullName>
    <description>PacPoint-JB103118 - Created for BREG phase 1: Used in Process Builder to automate Intake Status email to Case Team members. Set default minimum number of team members present to receive the initial email here.</description>
    <formula>TotalNumberCaseTeam__c &gt;= 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsDefaultTeamNumber</label>
    <type>Checkbox</type>
</CustomField>