force-app/main/default/objects/SEBCase__c/fields/Number_of_Legal_ActionSEB_Case_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Legal_ActionSEB_Case_Contacts__c</fullName>
    <label>Number of Legal ActionSEB Case Contacts</label>
    <summaryForeignKey>SEBCaseContact__c.SEBCase__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>