force-app/main/default/objects/SEBCase__c/fields/OutsideAgencyDisposition__c.field-meta.xml
<CustomField>
    <fullName>OutsideAgencyDisposition__c</fullName>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Outside Agency Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attorney General</fullName>
            </value>
            <value>
                <fullName>Prosecutor&apos;s Office</fullName>
            </value>
            <value>
                <fullName>Federal Bureau of Investigation</fullName>
            </value>
            <value>
                <fullName>Internal Revenue Service</fullName>
            </value>
            <value>
                <fullName>US Secret Service</fullName>
            </value>
            <value>
                <fullName>US Postal Inspection Service</fullName>
            </value>
            <value>
                <fullName>US Attorney&apos;s Office</fullName>
            </value>
            <value>
                <fullName>US Securities and Exchange Commission</fullName>
            </value>
            <value>
                <fullName>US Commodity Futures Trading Commission</fullName>
            </value>
            <value>
                <fullName>Federal Trade Commission</fullName>
            </value>
            <value>
                <fullName>US Department of Labor</fullName>
            </value>
            <value>
                <fullName>US Department of Homeland Security Investigations</fullName>
            </value>
            <value>
                <fullName>US Office of Inspector General</fullName>
            </value>
            <value>
                <fullName>Consumer Financial Protection Bureau</fullName>
            </value>
            <value>
                <fullName>National Futures Association</fullName>
            </value>
            <value>
                <fullName>Police Department</fullName>
            </value>
            <value>
                <fullName>Office of Disciplinary Counsel</fullName>
            </value>
            <value>
                <fullName>North  American Securities Administrators Association</fullName>
            </value>
            <value>
                <fullName>Financial Industry Regulatory Authority</fullName>
            </value>
            <value>
                <fullName>Securities Division</fullName>
            </value>
            <value>
                <fullName>Insurance Division</fullName>
            </value>
            <value>
                <fullName>Division of Financial Institution</fullName>
            </value>
            <value>
                <fullName>Office of Consumer Protection</fullName>
            </value>
            <value>
                <fullName>Regulated Industries Complaints Office</fullName>
            </value>
            <value>
                <fullName>Adult Protective Services</fullName>
            </value>
            <value>
                <fullName>State Department of Taxation</fullName>
            </value>
            <value>
                <fullName>Naval Criminal Investigations Service</fullName>
            </value>
            <value>
                <fullName>US Department of Defense</fullName>
            </value>
            <value>
                <fullName>US Army Counterintelligence</fullName>
            </value>
            <value>
                <fullName>US Air Force Office of Special Investigations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>