force-app/main/default/objects/SEBCase__c/fields/PenaltiesAssessed__c.field-meta.xml
<CustomField>
    <fullName>PenaltiesAssessed__c</fullName>
    <description>PacPoint-IC102418 - Created for BREG phase 1</description>
    <label>Total Penalty Sanction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>