force-app/main/default/objects/SEBCase__c/fields/PenaltiesCollected__c.field-meta.xml
<CustomField>
    <fullName>PenaltiesCollected__c</fullName>
    <defaultValue>0</defaultValue>
    <description>PacPoint-IC102418 - Created for BREG phase 1</description>
    <label>Total Penalty Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>