force-app/main/default/objects/SEBCase__c/fields/PenaltiesSuspended__c.field-meta.xml
<CustomField>
    <fullName>PenaltiesSuspended__c</fullName>
    <defaultValue>0</defaultValue>
    <description>PacPoint-IC102418 - Created for BREG phase 1
PacPoint-RA110518 - Updated for BREG phase 1</description>
    <label>Total Penalty Suspended Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>