force-app/main/default/objects/SEBCase__c/fields/Penalty_Amount_Still_Due__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Amount_Still_Due__c</fullName>
    <formula>PenaltiesAssessed__c  -  PenaltiesCollected__c -  PenaltiesSuspended__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Penalty Amount Still Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>