force-app/main/default/objects/SEBCase__c/fields/Public__c.field-meta.xml
<CustomField>
    <fullName>Public__c</fullName>
    <description>PacPoint-IC102418 - Created for BREG phase 1</description>
    <label>Public/Non-Public</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>NonPublic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>